[tool.poetry]
name = "optional_python"
version = "0.1.0"
description = "A replication of the Java's Optional API, in order to avoir None handling"
authors = ["AldricVS <aldric.silvestre@outlook.fr>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
